Updates run.* scripts. Updated README.md