@@ -1,2 +1,3 @@
 #!/bin/bash
-${JAVA_HOME}/bin/java -jar NovaPoshta.jar &
+JFX_PATH=/full/path/to/jfx
+${JAVA_HOME}/bin/java ${JFX_PATH}/lib --add-modules javafx.controls,javafx.fxm -jar NovaPoshta.jar &
